updated html site title and description

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Family Pro Cleaning",
+  "name": "Natacha Pro Cleaning",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
